order-shipping/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order-service
    spec:
      containers:
      - env:
        - name: AMQP_URL
          value: "amqp://guest:guest@rabbitmq:5672"
        image: vikipranata/order-service:latest
        name: order-service
        command: ["/bin/sh", "-c"]
        args: ["/bin/wait-for-it.sh rabbitmq:5672 --timeout=30 -- node index.js"]
        ports:
        - containerPort: 3000
