order-shipping/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  type: ClusterIP
  ports:
    - name: order-service
      protocol: TCP
      port: 3000
      targetPort: 3000
