order-shipping/shipping-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping-service
  type: ClusterIP
  ports:
    - name: shipping-service
      protocol: TCP
      port: 3001
      targetPort: 3001
