order-shipping/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service
spec:
  ingressClassName: {}
  rules:
  - host: order.tworty.id
    http:
      paths:
      - backend:
          service:
            name: order-service
            port:
              number: 3000
        path: /
        pathType: Prefix
